// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalCard1 should render is-read correctly 1`] = `
<div>
  <article
    class="horizontalCard1 isRead"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <div>
            <div>
              
              <img
                alt="This is the title"
                class="__lazy"
                data-src="/_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=1200&q=75"
                data-srcset="/_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=1200&q=75 1200w"
              />
            </div>
          </div>
        </picture>
        <figcaption />
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
          <time>
            11:40
          </time>
        </div>
        <div
          class="textContainer"
        >
          <h1>
            This is the title
          </h1>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HorizontalCard1 should render variant-1 correctly 1`] = `
<div>
  <article
    class="horizontalCard1 longread"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <div>
            <div>
              
              <img
                alt="This is the title"
                class="__lazy"
                data-src="/_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=1200&q=75"
                data-srcset="/_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fimages.example.com%2Fimage.png&w=1200&q=75 1200w"
              />
            </div>
          </div>
        </picture>
        <figcaption />
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
          <time>
            11:40
          </time>
        </div>
        <div
          class="textContainer"
        >
          <h1>
            This is the title
          </h1>
        </div>
      </div>
    </a>
  </article>
</div>
`;
